Enum API added
