# src/routes/enums/schema.ts
@@ -1,0 +1,15 @@
+/**
+ * @openapi
+ * components:
+ *   schemas:
+ *
+ *     enum:
+ *        type: array
+ *        items: 
+ *          type: object
+ *          properties:
+ *           value:
+ *            type: number
+ *           displayName:
+ *             type: string
+ */
